sidecar/src/snapshots/tuning_coach_sidecar__telemetry__tests__dash_packet_01.bin.snap
---
source: src/telemetry.rs
expression: parsed
---
Dash(
    DashPacket {
        sled: SledPacket {
            is_race_on: 1,
            timestamp_ms: 123456,
            engine_max_rpm: 8500.0,
            engine_idle_rpm: 900.0,
            current_engine_rpm: 3200.0,
            acceleration_x: 0.0,
            acceleration_y: 0.0,
            acceleration_z: 0.0,
            velocity_x: 0.0,
            velocity_y: 0.0,
            velocity_z: 0.0,
            angular_velocity_x: 0.0,
            angular_velocity_y: 0.0,
            angular_velocity_z: 0.0,
            yaw: 0.0,
            pitch: 0.0,
            roll: 0.0,
            normalized_suspension_travel_front_left: 0.0,
            normalized_suspension_travel_front_right: 0.0,
            normalized_suspension_travel_rear_left: 0.0,
            normalized_suspension_travel_rear_right: 0.0,
            tire_slip_ratio_front_left: 0.0,
            tire_slip_ratio_front_right: 0.0,
            tire_slip_ratio_rear_left: 0.0,
            tire_slip_ratio_rear_right: 0.0,
            wheel_rotation_speed_front_left: 0.0,
            wheel_rotation_speed_front_right: 0.0,
            wheel_rotation_speed_rear_left: 0.0,
            wheel_rotation_speed_rear_right: 0.0,
            wheel_on_rumble_strip_front_left: 0,
            wheel_on_rumble_strip_front_right: 0,
            wheel_on_rumble_strip_rear_left: 0,
            wheel_on_rumble_strip_rear_right: 0,
            wheel_in_puddle_depth_front_left: 0.0,
            wheel_in_puddle_depth_front_right: 0.0,
            wheel_in_puddle_depth_rear_left: 0.0,
            wheel_in_puddle_depth_rear_right: 0.0,
            surface_rumble_front_left: 0.0,
            surface_rumble_front_right: 0.0,
            surface_rumble_rear_left: 0.0,
            surface_rumble_rear_right: 0.0,
            tire_slip_angle_front_left: 0.0,
            tire_slip_angle_front_right: 0.0,
            tire_slip_angle_rear_left: 0.0,
            tire_slip_angle_rear_right: 0.0,
            tire_combined_slip_front_left: 0.0,
            tire_combined_slip_front_right: 0.0,
            tire_combined_slip_rear_left: 0.0,
            tire_combined_slip_rear_right: 0.0,
            suspension_travel_meters_front_left: 0.0,
            suspension_travel_meters_front_right: 0.0,
            suspension_travel_meters_rear_left: 0.0,
            suspension_travel_meters_rear_right: 0.0,
            car_ordinal: 145,
            car_class: 2,
            car_performance_index: 765,
            drivetrain_type: 1,
            num_cylinders: 8,
        },
        position_x: 0.0,
        position_y: 0.0,
        position_z: 0.0,
        speed: 48.75,
        power: 0.0,
        torque: 0.0,
        tire_temp_front_left: 0.0,
        tire_temp_front_right: 0.0,
        tire_temp_rear_left: 0.0,
        tire_temp_rear_right: 0.0,
        boost: 0.0,
        fuel: 0.0,
        distance_traveled: 0.0,
        best_lap: 0.0,
        last_lap: 0.0,
        current_lap: 0.0,
        current_race_time: 0.0,
        lap_number: 3,
        race_position: 5,
        accel: 160,
        brake: 0,
        clutch: 0,
        hand_brake: 0,
        gear: 4,
        steer: -8,
        normalized_driving_line: 0,
        normalized_ai_brake_difference: 0,
        tire_wear_front_left: None,
        tire_wear_front_right: None,
        tire_wear_rear_left: None,
        tire_wear_rear_right: None,
        track_ordinal: None,
    },
)
