sidecar/src/snapshots/tuning_coach_sidecar__telemetry__tests__sled_packet_01.bin.snap
---
source: src/telemetry.rs
expression: parsed
---
Sled(
    SledPacket {
        is_race_on: 0,
        timestamp_ms: 9999,
        engine_max_rpm: 7000.0,
        engine_idle_rpm: 800.0,
        current_engine_rpm: 1200.0,
        acceleration_x: 0.0,
        acceleration_y: 0.0,
        acceleration_z: 0.0,
        velocity_x: 0.0,
        velocity_y: 0.0,
        velocity_z: 0.0,
        angular_velocity_x: 0.0,
        angular_velocity_y: 0.0,
        angular_velocity_z: 0.0,
        yaw: 0.0,
        pitch: 0.0,
        roll: 0.0,
        normalized_suspension_travel_front_left: 0.0,
        normalized_suspension_travel_front_right: 0.0,
        normalized_suspension_travel_rear_left: 0.0,
        normalized_suspension_travel_rear_right: 0.0,
        tire_slip_ratio_front_left: 0.0,
        tire_slip_ratio_front_right: 0.0,
        tire_slip_ratio_rear_left: 0.0,
        tire_slip_ratio_rear_right: 0.0,
        wheel_rotation_speed_front_left: 0.0,
        wheel_rotation_speed_front_right: 0.0,
        wheel_rotation_speed_rear_left: 0.0,
        wheel_rotation_speed_rear_right: 0.0,
        wheel_on_rumble_strip_front_left: 0,
        wheel_on_rumble_strip_front_right: 0,
        wheel_on_rumble_strip_rear_left: 0,
        wheel_on_rumble_strip_rear_right: 0,
        wheel_in_puddle_depth_front_left: 0.0,
        wheel_in_puddle_depth_front_right: 0.0,
        wheel_in_puddle_depth_rear_left: 0.0,
        wheel_in_puddle_depth_rear_right: 0.0,
        surface_rumble_front_left: 0.0,
        surface_rumble_front_right: 0.0,
        surface_rumble_rear_left: 0.0,
        surface_rumble_rear_right: 0.0,
        tire_slip_angle_front_left: 0.0,
        tire_slip_angle_front_right: 0.0,
        tire_slip_angle_rear_left: 0.0,
        tire_slip_angle_rear_right: 0.0,
        tire_combined_slip_front_left: 0.0,
        tire_combined_slip_front_right: 0.0,
        tire_combined_slip_rear_left: 0.0,
        tire_combined_slip_rear_right: 0.0,
        suspension_travel_meters_front_left: 0.0,
        suspension_travel_meters_front_right: 0.0,
        suspension_travel_meters_rear_left: 0.0,
        suspension_travel_meters_rear_right: 0.0,
        car_ordinal: 87,
        car_class: 0,
        car_performance_index: 540,
        drivetrain_type: 1,
        num_cylinders: 4,
    },
)
